# android-tv-mcp

./: README.md  pyproject.toml
src/android_tv_mcp/: __init__.py  config.py  connection.py  discovery.py  server.py
