[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "android-tv-mcp"
version = "0.2.0"
authors = [
    {name = "David Markey", email = "david@dmarkey.com"},
]
description = "MCP server for controlling Android TV devices"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["android-tv", "remote", "mcp", "model-context-protocol"]
dependencies = [
    "mcp[cli]>=1.0",
    "androidtvremote2>=0.2.2",
    "zeroconf>=0.47.0",
    "cryptography>=3",
    "protobuf>=4.21",
]

[project.scripts]
android-tv-mcp = "android_tv_mcp.server:main"

[project.urls]
Homepage = "https://github.com/dmarkey/android-tv-mcp"
Repository = "https://github.com/dmarkey/android-tv-mcp"
Issues = "https://github.com/dmarkey/android-tv-mcp/issues"
